[gd_scene load_steps=3 format=3]

[ext_resource type="PackedScene" uid="uid://ctwabcdef01234" path="res://scenes/desktop/tool_window.tscn" id="1_tw"]
[ext_resource type="Script" path="res://scenes/tools/comms_client.gd" id="2_cc"]

[node name="CommsClient" instance=ExtResource("1_tw")]
custom_minimum_size = Vector2(560, 380)
script = ExtResource("2_cc")

[node name="Margin" type="MarginContainer" parent="ContentArea"]
layout_mode = 1
anchor_right = 1.0
anchor_bottom = 1.0
theme_override_constants/margin_left = 6
theme_override_constants/margin_top = 6
theme_override_constants/margin_right = 6
theme_override_constants/margin_bottom = 6

[node name="HSplit" type="HSplitContainer" parent="ContentArea/Margin"]
layout_mode = 2
split_offset = 180

[node name="LeftPanel" type="VBoxContainer" parent="ContentArea/Margin/HSplit"]
layout_mode = 2
custom_minimum_size = Vector2(180, 0)
theme_override_constants/separation = 4

[node name="UnreadLabel" type="Label" parent="ContentArea/Margin/HSplit/LeftPanel"]
layout_mode = 2
text = ""

[node name="InboxList" type="ItemList" parent="ContentArea/Margin/HSplit/LeftPanel"]
layout_mode = 2
size_flags_vertical = 3
auto_height = true
allow_reselect = true

[node name="RightPanel" type="VBoxContainer" parent="ContentArea/Margin/HSplit"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 4

[node name="DetailScroll" type="ScrollContainer" parent="ContentArea/Margin/HSplit/RightPanel"]
layout_mode = 2
size_flags_vertical = 3

[node name="DetailVBox" type="VBoxContainer" parent="ContentArea/Margin/HSplit/RightPanel/DetailScroll"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 4

[node name="FromLabel" type="Label" parent="ContentArea/Margin/HSplit/RightPanel/DetailScroll/DetailVBox"]
layout_mode = 2
text = ""

[node name="SubjectLabel" type="Label" parent="ContentArea/Margin/HSplit/RightPanel/DetailScroll/DetailVBox"]
layout_mode = 2
text = ""

[node name="TimeLabel" type="Label" parent="ContentArea/Margin/HSplit/RightPanel/DetailScroll/DetailVBox"]
layout_mode = 2
text = ""

[node name="Sep" type="HSeparator" parent="ContentArea/Margin/HSplit/RightPanel/DetailScroll/DetailVBox"]
layout_mode = 2

[node name="BodyText" type="RichTextLabel" parent="ContentArea/Margin/HSplit/RightPanel/DetailScroll/DetailVBox"]
layout_mode = 2
size_flags_vertical = 3
custom_minimum_size = Vector2(0, 120)
fit_content = true
text = ""

[node name="EmptyLabel" type="Label" parent="ContentArea/Margin/HSplit/RightPanel/DetailScroll/DetailVBox"]
layout_mode = 2
text = "Select a message to read."

[node name="BtnRow" type="HBoxContainer" parent="ContentArea/Margin/HSplit/RightPanel"]
layout_mode = 2
alignment = 2
theme_override_constants/separation = 8

[node name="DeleteBtn" type="Button" parent="ContentArea/Margin/HSplit/RightPanel/BtnRow"]
layout_mode = 2
text = "[ DELETE ]"
